--- a/src/pages/homePage/sections/contactsSection/ContactsList/ContactsList.css
+++ b/src/pages/homePage/sections/contactsSection/ContactsList/ContactsList.css
@@ -46,6 +46,7 @@
 
 .separator {
   border: none;
+  box-sizing: border-box;
   height: 1px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.15);
