--- a/src/pages/homePage/sections/educationSection/educationList/EducationList.css
+++ b/src/pages/homePage/sections/educationSection/educationList/EducationList.css
@@ -48,4 +48,5 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0.15);
   margin: 0;
+  box-sizing: border-box;
 }
