--- a/src/pages/homePage/sections/interestSection/interestList/InterestList.css
+++ b/src/pages/homePage/sections/interestSection/interestList/InterestList.css
@@ -47,5 +47,6 @@
   height: 1px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.15);
+  box-sizing: border-box;
   margin: 0;
 }
