--- a/src/pages/homePage/sections/publicationsSection/publicationsList/PublicationsList.css
+++ b/src/pages/homePage/sections/publicationsSection/publicationsList/PublicationsList.css
@@ -48,6 +48,7 @@
   width: 100%;
   background-color: rgba(255, 255, 255, 0.15);
   margin: 0;
+  box-sizing: border-box;
 }
 
 .separatorInvisible{
@@ -56,4 +57,5 @@
   padding-top: 5px;
   width: 100%;
   margin: 0;
+  box-sizing: border-box;
 }
